[gd_scene load_steps=8 format=3 uid="uid://j2r16565q7gy"]

[ext_resource type="PackedScene" uid="uid://bf0ol0shdjiqv" path="res://scenes/Player.tscn" id="1_hhnig"]
[ext_resource type="Script" path="res://scripts/main.gd" id="1_q15nc"]
[ext_resource type="PackedScene" uid="uid://blaosltvaowsf" path="res://scenes/Creature.tscn" id="2_q7t2w"]
[ext_resource type="PackedScene" uid="uid://clxvxerf76k6x" path="res://scenes/hud.tscn" id="4_ddwuc"]
[ext_resource type="AudioStream" uid="uid://c7lord7nsixsl" path="res://art/House In a Forest Loop.ogg" id="5_djtvu"]
[ext_resource type="AudioStream" uid="uid://28q4yaatpcg4" path="res://art/gameover.wav" id="6_ylsr0"]

[sub_resource type="Curve2D" id="Curve2D_hqia7"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_q15nc")
creature_scene = ExtResource("2_q7t2w")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Player" parent="." instance=ExtResource("1_hhnig")]
visible = false

[node name="CreatureTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
visible = false
position = Vector2(240, 450)

[node name="CreaturePath" type="Path2D" parent="."]
curve = SubResource("Curve2D_hqia7")

[node name="CreatureSpawnLocation" type="PathFollow2D" parent="CreaturePath"]

[node name="HUD" parent="." instance=ExtResource("4_ddwuc")]

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_djtvu")

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_ylsr0")

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="CreatureTimer" to="." method="_on_creature_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
